--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,47 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;1,200;1,500&display=swap');
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  font-family: 'Poppins', sans-serif;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#root{
+  align-items: center;
+}
+section{
+  text-align: center;
+  width: 300px;
+  background-color: lightgray;
+  margin-left: 45%;
+  position: relative;
+}
+p{
+  margin: 10px;
+  margin-bottom: 10px;
+  display: none;
+}
+button{
+  border: none;
+  height: 72.7%;
+  width: 8%;
+  background: none;
+}
+img{
+  max-width: 100%;
+}
+.buttonOne{
+  position: absolute;
+  right: 0;
+  top: 105px;
+}
+.buttonTwo{
+  position: absolute;
+  right: 276px;
+  top: 105px;
+}
+button:hover{
+  transition: 0.3s;
+  background-color: lightgray;
+}
+h2{
+  height: 105px;
 }
